# fds

./: .pre-commit-config.yaml  Makefile  RELEASE-NOTES.md  pyproject.toml  requirements-dev.txt
.github/workflows/: CI.yml  test.yml
extras/: dot-envrc
tests/: test_fds.py
