[tool.poetry]
name = "fds"
version = "0.6.3"
description = "Fast Data Science, AKA fds, is a CLI for Data Scientists to version control data and code at once, by conveniently wrapping git and dvc"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
fds = "fds.cli:main"
sdf = "fds.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0,>=0.4.6"
humanize = "^4"
progress = "^1"
validators = "^0,>=0.20"
requests = "^2"
dvc = "^3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7"
pre-commit = "^3"
pytest = "^8"
pytest-cov = "^5"
pytest-xdist = "^3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^14"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules --cov --cov-report="
testpaths = [
    "fds",
    "tests"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
]
norecursedirs = ["docs", "extras", "spikes"]

[tool.coverage.run]
source = ["fds/"]

[tool.coverage.report]
omit = ["*/tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
